<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/black">

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_here"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="20dp" />

    <Switch
        android:id="@+id/switch_background_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_music"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_black_blue1000"
        android:layout_marginTop="20dp"/>
</LinearLayout>
